# hyper-static-server

documentation/: readme.md
examples/: Cargo.toml  main.rs
examples/askama/: _base.html  _footer.html  _header.html  home.html
examples/assets/css/: other.scss
examples/assets/files/: data.txt
examples/assets/js/: main.js
examples/css/: main.scss  other.scss
examples/files/: context.json  context.toml  context.yaml
examples/markdown/: _footer.html  _footer.html-0  _header.html  _header.html-0  hello.md  with-context.md  with-frontmatter-json.md  with-frontmatter-toml.md  with-frontmatter-yaml.md
examples/sources/: build.rs  exporter.rs  main.rs  routes.in  server.rs  tests.rs
examples/templates/: _base.html-0  _footer.html-0  _header.html-0  home-with-context.html  home-with-trait.html  home.html  markdown-with-context.html  markdown-with-frontmatter.html  markdown.html  page-1.html  page-2.html
scripts/: _z-run  custom-configurations.z-run  custom-environment.z-run  custom-features.z-run  custom-generators.z-run  custom-scriptlets.z-run  z-run
sources/: Cargo.toml  askama.toml  builder.rs  builder_errors.rs  builder_macros.rs  errors.rs  example.rs  exporter.rs  lib.rs  macros.rs  macros_builder.rs  macros_runtime.rs  main.rs  prelude.rs  reload.js  resources.in  resources.rs  runtime.rs  runtime_askama.rs  runtime_context.rs  runtime_macros.rs  runtime_sitemaps.rs  server.rs  support_markdown.rs  support_sass.rs
