

[package]
name = "hyper-static-server-example"
version = "0.0.0"
license = "MIT"
edition = "2021"
build = "./sources/build.rs"


[[bin]]
name = "example"
path = "./sources/main.rs"




[dependencies]

hyper-static-server = { version = "*", default-features = false, features = [] }

# askama = { version = "*", default-features = true }
askama = { package = "askama_patched", version = "*", default-features = true }

serde = { version = "*", default-features = true }


[build-dependencies]

hyper-static-server = { version = "*", default-features = false, features = ["builder-all"] }




[features]

default = [
	"server",
	"exporter",
]

development = [
	"hyper-static-server/server-all-dynamic",
	"hyper-static-server/exporter-all-dynamic",
	"hyper-static-server/builder-all-dynamic",
]

server = [
	"hyper-static-server/server-all",
]

exporter = [
	"hyper-static-server/exporter-all",
]

production = [
	"hyper-static-server/production",
]




[patch.crates-io]

# hyper-static-server = { git = "https://github.com/console9/hyper-static-server", tag = "v0.6.1" }
# hyper-static-server = { git = "https://github.com/console9/hyper-static-server", branch = "console9" }
# hyper-static-server = { git = "https://github.com/console9/hyper-static-server", branch = "development" }
hyper-static-server = { path = "../../hyper-static-server/sources" }

# hyper-simple-server = { git = "https://github.com/console9/hyper-simple-server", tag = "v0.6.1" }
# hyper-simple-server = { git = "https://github.com/console9/hyper-simple-server", branch = "console9" }
# hyper-simple-server = { git = "https://github.com/console9/hyper-simple-server", branch = "development" }
hyper-simple-server = { path = "../../hyper-simple-server/sources" }

# vrl-errors = { git = "https://github.com/volution/volution-rust-libraries", tag = "v0.1.1" }
# vrl-cli-arguments = { git = "https://github.com/volution/volution-rust-libraries", tag = "v0.1.1" }

# vrl-errors = { git = "https://github.com/volution/volution-rust-libraries", branch = "console9" }
# vrl-cli-arguments = { git = "https://github.com/volution/volution-rust-libraries", branch = "console9" }

vrl-errors = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }
vrl-cli-arguments = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }

# vrl-errors = { path = "../../volution-rust-libraries/sources/errors" }
# vrl-cli-arguments = { path = "../../volution-rust-libraries/sources/cli-arguments" }

askama_patched = { git = "https://github.com/cipriancraciun/askama", branch = "console9" }
# askama_patched = { path = "../../askama/askama_patched" }


