
################################################################################
################################################################################




[package]

name = "hyper-static-server"
version = "0.4.0"
license = "MIT"

edition = "2021"
rust-version = "1.58"
resolver = "2"
publish = false

authors = ["Ciprian Dorin Craciun <ciprian@volution.ro>"]
repository = "https://github.com/console9/hyper-static-server"
documentation = "https://docs.rs/hyper-static-server"
description = "Simple friendly library to build static servers with hyper HTTP server."

autobins = false
autoexamples = false
autotests = false
autobenches = false




[lib]

name = "hyper_static_server"
path = "./lib.rs"




################################################################################
################################################################################




[features]

default = [
	"server",
	"exporter",
	"runtime",
	"runtime-sitemaps",
	"runtime-sitemaps-xml",
	"runtime-hss-exports",
	"builder",
	"builder-sass",
	"builder-markdown",
]

server = [
	"hyper-simple-server/hss-full",
	"runtime",
	"rand",
]

exporter = [
	"hyper-simple-server/hss-handler",
	"hyper-simple-server/hss-routes",
	"hyper-simple-server/hss-extensions",
	"hyper-simple-server/hss-runtime",
	"hyper-simple-server/hss-exports",
	"hyper-simple-server/hss-config",
	"hyper-simple-server/hss-cli",
	"runtime",
	"cpio",
]

runtime = [
	"hyper-simple-server/hss-errors",
]

runtime-sitemaps = [
	"runtime",
	"hyper-simple-server/hss-handler",
	"hyper-simple-server/hss-routes",
	"hyper-simple-server/hss-extensions",
	"hyper-simple-server/hss-exports",
	"url",
]

runtime-sitemaps-xml = [
	"runtime-sitemaps",
	"sitewriter",
]

runtime-hss-exports = [
	"runtime",
]

builder = [
	"hyper-simple-server/hss-errors",
	"walkdir",
	"globset",
	"blake2",
	"proc-macro2",
]

builder-sass = [
	"builder-sass-rs",
]

builder-sass-rs = [
	"builder",
	"sass-rs",
]

builder-sass-alt = [
	"builder",
	"sass-alt",
]

builder-markdown = [
	"builder",
	"pulldown-cmark",
]


features-fuzzing = []
features-none = []




################################################################################
################################################################################




[dependencies]

hyper-simple-server = { version = "0.3.0", default-features = false, optional = true }

globset = { version = "0.4.6", default-features = false, optional = true }
pulldown-cmark = { version = "0.8.0", default-features = false, optional = true }
rand = { version = "0.8.3", default-features = false, features = ["std", "std_rng"], optional = true }
sass-rs = { version = "0.2.2", default-features = false, optional = true }
sass-alt = { version = "0.2.7", default-features = false, optional = true }
walkdir = { version = "2.3.1", default-features = false, optional = true }
proc-macro2 = { version = "1.0.36", default-features = false, features = ["proc-macro"], optional = true }
url = { version = "2.2.2", default-features = false, optional = true }
sitewriter = { version = "0.5.1", default-features = false, optional = true }
blake2 = { version = "0.9.1", default-features = false, features = ["std"], optional = true }
cpio = { version = "0.2.1", default-features = false, optional = true }




################################################################################
################################################################################




[profile.dev]
incremental = true
codegen-units = 1024
opt-level = 0
lto = "off"
debug = 2
debug-assertions = true
overflow-checks = true
panic = "unwind"

[profile.test]
incremental = true
codegen-units = 1024
opt-level = 0
lto = "off"
debug = 2
debug-assertions = true
overflow-checks = true

[profile.release]
incremental = false
codegen-units = 1
opt-level = 3
lto = "fat"
debug = 1
debug-assertions = false
overflow-checks = true
panic = "abort"

[profile.bench]
incremental = false
codegen-units = 1
opt-level = 3
lto = "fat"
debug = 1
debug-assertions = false
overflow-checks = true


[profile.dev.package."*"]
incremental = false
codegen-units = 1
opt-level = 3
debug = 2
debug-assertions = true
overflow-checks = true


[profile.dev.build-override]
incremental = false
codegen-units = 1
opt-level = 3
debug = 2
debug-assertions = true
overflow-checks = true


[profile.release.build-override]
incremental = false
codegen-units = 1
opt-level = 3
debug = 1
debug-assertions = false
overflow-checks = true




################################################################################
################################################################################




[patch.crates-io]

hyper-simple-server = { path = "../../hyper-simple-server/sources" }




################################################################################
################################################################################

