
################################################################################
################################################################################




[package]

name = "hyper-static-server"

version = "0.6.0"
publish = false

edition = "2021"
resolver = "2"
rust-version = "1.75"

authors = [
	"Ciprian Dorin Craciun <ciprian@volution.ro>",
]
license = "MIT"

description = "Simple friendly library to build static servers with hyper HTTP server."
keywords = []
categories = []

homepage = "https://github.com/console9/hyper-static-server"
repository = "https://github.com/console9/hyper-static-server"
documentation = "https://docs.rs/hyper-static-server"

autobins = false
autoexamples = false
autotests = false
autobenches = false




[lib]

name = "hyper_static_server"
path = "./lib.rs"

test = false
bench = false
doctest = false




################################################################################
################################################################################




[features]

default = [
	"all-dynamic",
]

all = [
	"server-all",
	"exporter-all",
	"runtime-all",
	"builder-all",
]
all-dynamic = [
	"server-all-dynamic",
	"exporter-all-dynamic",
	"runtime-all-dynamic",
	"builder-all-dynamic",
]

server-all = [
	"server",
	"runtime-all",
]
server-all-dynamic = [
	"server",
	"runtime-all-dynamic",
]

exporter-all = [
	"exporter",
	"runtime-all",
]
exporter-all-dynamic = [
	"exporter",
	"runtime-all-dynamic",
]

runtime-all = [
	"runtime",
	"runtime-macros",
	"runtime-context",
	"runtime-context-serde",
	"runtime-askama",
	"runtime-askama-serde",
	"runtime-sitemaps",
	"runtime-sitemaps-xml",
#!	"runtime-hss-exports",
]
runtime-all-dynamic = [
	"runtime-all",
	"builder-assets-sass-dynamic",
	"builder-markdown-dynamic",
	"builder-askama-dynamic",
]

builder-all = [
	"builder",
	"builder-macros",
	"builder-assets",
	"builder-assets-sass",
	"builder-markdown",
	"builder-askama",
	"builder-sitemaps",
]
builder-all-dynamic = [
	"builder-all",
	"builder-relaxed-dependencies",
	"builder-assets-sass-dynamic",
	"builder-markdown-dynamic",
	"builder-askama-dynamic",
]

production = []

server = [
	"hyper-simple-server/hss-full",
	"runtime",
	"rand",
]

exporter = [
	"hyper-simple-server/hss-config",
	"hyper-simple-server/hss-cli",
	"hyper-simple-server/hss-main",
	"runtime",
	"cpio",
]

runtime = [
	"hyper-simple-server/hss-handler",
	"hyper-simple-server/hss-routes",
	"hyper-simple-server/hss-extensions",
	"hyper-simple-server/hss-runtime",
	"hyper-simple-server/hss-exports",
	"once_cell",
]

runtime-macros = [
	"runtime",
]

runtime-context = [
	"runtime",
]

runtime-context-serde = [
	"runtime-context",
	"serde",
	"toml",
	"serde_yaml",
	"serde_json",
]

runtime-askama = [
	"runtime",
	"runtime-context",
]

runtime-askama-serde = [
	"runtime-askama",
	"runtime-context-serde",
]

runtime-sitemaps = [
	"runtime",
	"hyper-simple-server/hss-handler",
	"hyper-simple-server/hss-routes",
	"hyper-simple-server/hss-extensions",
	"hyper-simple-server/hss-exports",
	"url",
]

runtime-sitemaps-xml = [
	"runtime-sitemaps",
	"sitewriter",
	"chrono",
]

runtime-hss-exports = [
	"runtime",
]

builder = [
	"support-builder",
	"walkdir",
	"globset",
	"proc-macro2",
]

builder-macros = [
	"builder",
]

builder-assets = [
	"builder",
]

builder-assets-sass = [
	"builder",
	"support-sass",
]

builder-assets-sass-dynamic = [
	"support-sass",
]

builder-markdown = [
	"builder",
	"support-markdown",
]

builder-markdown-dynamic = [
	"support-markdown",
]

builder-askama = [
	"builder",
]

builder-askama-dynamic = []

builder-sitemaps = [
	"builder",
]

builder-relaxed-dependencies = []

support-sass = [
	"support-builder",
	"sass-rs",
]

support-markdown = [
	"support-builder",
	"pulldown-cmark",
	"serde",
	"serde_json",
	"any_ascii",
]

support-builder = [
	"blake2",
]

features-fuzzing = []
features-none = []




################################################################################
################################################################################




[dependencies]

hyper-simple-server = { version = "0.6.0", default-features = false, optional = true }

globset = { version = "0.4.9", default-features = false, optional = true }
pulldown-cmark = { version = "0.9.2", default-features = false, optional = true }
any_ascii = { version = "0.3.1", default-features = false, optional = true }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"], optional = true }
sass-rs = { version = "0.2.2", default-features = false, optional = true }
sass-alt = { version = "0.2.7", default-features = false, optional = true }
walkdir = { version = "2.3.2", default-features = false, optional = true }
proc-macro2 = { version = "1.0.36", default-features = false, features = ["proc-macro"], optional = true }
url = { version = "2.2.2", default-features = false, optional = true }
sitewriter = { version = "0.5.2", default-features = false, optional = true }
chrono = { version = "0.4.22", default-features = false, optional = true }
blake2 = { version = "0.9.1", default-features = false, features = ["std"], optional = true }
cpio = { version = "0.2.1", default-features = false, optional = true }
serde = { version = "1.0.143", default-features = false, features = ["std", "derive"], optional = true }
serde_json = { version = "1.0.83", default-features = false, features = ["std"], optional = true }
serde_yaml = { version = "0.8.26", default-features = false, features = [], optional = true }
toml = { version = "0.5.9", default-features = false, features = [], optional = true }
once_cell = { version = "1.13.1", default-features = false, features = ["std"], optional = true }

vrl-errors = { version = "*", default-features = false, features = [] }




################################################################################
################################################################################




[patch.crates-io]

# hyper-simple-server = { git = "https://github.com/console9/hyper-simple-server", tag = "v0.6.1" }
hyper-simple-server = { git = "https://github.com/console9/hyper-simple-server", branch = "development" }
# hyper-simple-server = { path = "../.dependencies/hyper-simple-server/sources" }

# vrl-errors = { git = "https://github.com/volution/volution-rust-libraries", tag = "v0.1.1" }
# vrl-cli-arguments = { git = "https://github.com/volution/volution-rust-libraries", tag = "v0.1.1" }

vrl-errors = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }
vrl-cli-arguments = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }

# vrl-errors = { path = "../.dependencies/volution-rust-libraries/sources/errors" }
# vrl-cli-arguments = { path = "../.dependencies/volution-rust-libraries/sources/cli-arguments" }




################################################################################
################################################################################




[profile.dev]
incremental = true
codegen-units = 1024
opt-level = 1
lto = "off"
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
split-debuginfo = "packed"
rpath = false
panic = "unwind"


[profile.test]
incremental = true
codegen-units = 1024
opt-level = 1
lto = "off"
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
rpath = false
split-debuginfo = "packed"


[profile.release]
incremental = false
codegen-units = 1
opt-level = 3
lto = "fat"
debug = "none"
debug-assertions = false
overflow-checks = true
strip = "symbols"
split-debuginfo = "packed"
rpath = false
panic = "abort"


[profile.bench]
incremental = false
codegen-units = 1
opt-level = 3
lto = "fat"
debug = "none"
debug-assertions = false
overflow-checks = true
strip = "symbols"
split-debuginfo = "packed"
rpath = false




[profile.dev.package."*"]
incremental = true
codegen-units = 1024
opt-level = 1
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
split-debuginfo = "packed"




[profile.dev.build-override]
incremental = true
codegen-units = 1024
opt-level = 2
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
split-debuginfo = "packed"


[profile.release.build-override]
incremental = true
codegen-units = 1024
opt-level = 2
debug = "none"
debug-assertions = false
overflow-checks = true
strip = "symbols"
split-debuginfo = "packed"




################################################################################
################################################################################

